# tartantest

./: README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
asserts/: asserts.py  errors.py
pyasserts/: __init__.py  asserts.py  errors.py
setUpers/: __init__.py  errors.py  setup.py
tartantest/: README.md
tartantest/setUpers/: __init__.py  setup.py
tartantest/testbase/: __init__.py  base.py  errors.py  testbclass.py  testbfunc.py
testbase/: __init__.py  base.py  errors.py  testall.py  testb.py  testbclass.py  testbfunc.py
